[package]
name = "tinygfx"
description = "Graphics library for embedded memory-constrained devices"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.2"

[build-dependencies]
tinygfx-assets = { path = "../tinygfx-assets" }

[[bench]]
name = "text"
harness = false
